--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -91,7 +91,7 @@
      <enum>QTabWidget::Rounded</enum>
     </property>
     <property name="currentIndex">
-     <number>3</number>
+     <number>0</number>
     </property>
     <property name="tabBarAutoHide">
      <bool>false</bool>
@@ -258,7 +258,7 @@
        <rect>
         <x>309</x>
         <y>131</y>
-        <width>109</width>
+        <width>110</width>
         <height>30</height>
        </rect>
       </property>
@@ -548,7 +548,7 @@
     </widget>
     <widget class="QWidget" name="TabSetting">
      <attribute name="title">
-      <string>备份</string>
+      <string>其它</string>
      </attribute>
      <widget class="QPushButton" name="solveVAC">
       <property name="enabled">
@@ -556,9 +556,9 @@
       </property>
       <property name="geometry">
        <rect>
-        <x>290</x>
-        <y>60</y>
-        <width>130</width>
+        <x>220</x>
+        <y>10</y>
+        <width>201</width>
         <height>40</height>
        </rect>
       </property>
@@ -577,9 +577,9 @@
      <widget class="QPushButton" name="reloadHarmony">
       <property name="geometry">
        <rect>
-        <x>290</x>
-        <y>160</y>
-        <width>130</width>
+        <x>220</x>
+        <y>110</y>
+        <width>201</width>
         <height>40</height>
        </rect>
       </property>
@@ -598,9 +598,9 @@
      <widget class="QPushButton" name="antiHarmony">
       <property name="geometry">
        <rect>
-        <x>290</x>
-        <y>110</y>
-        <width>130</width>
+        <x>220</x>
+        <y>60</y>
+        <width>201</width>
         <height>40</height>
        </rect>
       </property>
@@ -623,9 +623,9 @@
       <property name="geometry">
        <rect>
         <x>10</x>
-        <y>210</y>
-        <width>410</width>
-        <height>350</height>
+        <y>10</y>
+        <width>201</width>
+        <height>41</height>
        </rect>
       </property>
       <property name="font">
@@ -646,9 +646,9 @@
      <widget class="QPushButton" name="ManualSteamID">
       <property name="geometry">
        <rect>
-        <x>290</x>
-        <y>10</y>
-        <width>130</width>
+        <x>150</x>
+        <y>60</y>
+        <width>61</width>
         <height>40</height>
        </rect>
       </property>
@@ -668,8 +668,8 @@
       <property name="geometry">
        <rect>
         <x>10</x>
-        <y>10</y>
-        <width>270</width>
+        <y>60</y>
+        <width>131</width>
         <height>40</height>
        </rect>
       </property>
@@ -695,18 +695,18 @@
 &lt;html&gt;&lt;head&gt;&lt;meta name=&quot;qrichtext&quot; content=&quot;1&quot; /&gt;&lt;style type=&quot;text/css&quot;&gt;
 p, li { white-space: pre-wrap; }
 &lt;/style&gt;&lt;/head&gt;&lt;body style=&quot; font-family:'微软雅黑','微软雅黑','微软雅黑','微软雅黑'; font-size:16pt; font-weight:400; font-style:normal;&quot;&gt;
-&lt;p style=&quot;-qt-paragraph-type:empty; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px; font-family:'微软雅黑'; font-size:14pt;&quot;&gt;&lt;br /&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+&lt;p style=&quot;-qt-paragraph-type:empty; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;&lt;br /&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
       </property>
       <property name="placeholderText">
-       <string> 手动输入SteamID</string>
+       <string>手动输入ID</string>
       </property>
      </widget>
      <widget class="QPushButton" name="manualCsgoBtn">
       <property name="geometry">
        <rect>
         <x>10</x>
-        <y>60</y>
-        <width>170</width>
+        <y>110</y>
+        <width>201</width>
         <height>40</height>
        </rect>
       </property>
@@ -721,6 +721,195 @@ p, li { white-space: pre-wrap; }
       <property name="text">
        <string>手动选择CSGO路径</string>
       </property>
+     </widget>
+     <widget class="QGroupBox" name="powerPlan">
+      <property name="geometry">
+       <rect>
+        <x>10</x>
+        <y>440</y>
+        <width>231</width>
+        <height>121</height>
+       </rect>
+      </property>
+      <property name="title">
+       <string>电源计划</string>
+      </property>
+      <widget class="QWidget" name="verticalLayoutWidget">
+       <property name="geometry">
+        <rect>
+         <x>10</x>
+         <y>21</y>
+         <width>131</width>
+         <height>92</height>
+        </rect>
+       </property>
+       <layout class="QVBoxLayout" name="cpuType">
+        <item>
+         <widget class="QRadioButton" name="Ryzen3000">
+          <property name="text">
+           <string>Ryzen三代</string>
+          </property>
+         </widget>
+        </item>
+        <item>
+         <widget class="QRadioButton" name="RyzenEtc">
+          <property name="text">
+           <string>Ryzen一二代</string>
+          </property>
+         </widget>
+        </item>
+        <item>
+         <widget class="QRadioButton" name="allPlatform">
+          <property name="text">
+           <string>全平台通用</string>
+          </property>
+         </widget>
+        </item>
+       </layout>
+      </widget>
+      <widget class="QWidget" name="verticalLayoutWidget_2">
+       <property name="geometry">
+        <rect>
+         <x>150</x>
+         <y>20</y>
+         <width>73</width>
+         <height>91</height>
+        </rect>
+       </property>
+       <layout class="QVBoxLayout" name="exactPlan">
+        <item>
+         <widget class="QRadioButton" name="high">
+          <property name="layoutDirection">
+           <enum>Qt::LeftToRight</enum>
+          </property>
+          <property name="text">
+           <string>高性能</string>
+          </property>
+         </widget>
+        </item>
+        <item>
+         <widget class="QRadioButton" name="balanced">
+          <property name="layoutDirection">
+           <enum>Qt::LeftToRight</enum>
+          </property>
+          <property name="text">
+           <string>   平衡</string>
+          </property>
+         </widget>
+        </item>
+        <item>
+         <widget class="QRadioButton" name="powersave">
+          <property name="layoutDirection">
+           <enum>Qt::LeftToRight</enum>
+          </property>
+          <property name="text">
+           <string>   节能</string>
+          </property>
+         </widget>
+        </item>
+       </layout>
+      </widget>
+     </widget>
+     <widget class="QGroupBox" name="groupLauOpt1">
+      <property name="geometry">
+       <rect>
+        <x>10</x>
+        <y>160</y>
+        <width>411</width>
+        <height>121</height>
+       </rect>
+      </property>
+      <property name="title">
+       <string>启动项①</string>
+      </property>
+      <widget class="QPushButton" name="LaunchWWd1">
+       <property name="geometry">
+        <rect>
+         <x>280</x>
+         <y>70</y>
+         <width>121</width>
+         <height>41</height>
+        </rect>
+       </property>
+       <property name="text">
+        <string>启动国际服</string>
+       </property>
+      </widget>
+      <widget class="QLineEdit" name="LaunchOpt1">
+       <property name="geometry">
+        <rect>
+         <x>10</x>
+         <y>30</y>
+         <width>391</width>
+         <height>31</height>
+        </rect>
+       </property>
+       <property name="text">
+        <string/>
+       </property>
+      </widget>
+      <widget class="QPushButton" name="LaunchPWrd1">
+       <property name="geometry">
+        <rect>
+         <x>150</x>
+         <y>70</y>
+         <width>121</width>
+         <height>41</height>
+        </rect>
+       </property>
+       <property name="text">
+        <string>启动国服</string>
+       </property>
+      </widget>
+     </widget>
+     <widget class="QGroupBox" name="groupLauOpt2">
+      <property name="geometry">
+       <rect>
+        <x>10</x>
+        <y>300</y>
+        <width>411</width>
+        <height>121</height>
+       </rect>
+      </property>
+      <property name="title">
+       <string>启动项②</string>
+      </property>
+      <widget class="QPushButton" name="LaunchPWrd2">
+       <property name="geometry">
+        <rect>
+         <x>150</x>
+         <y>70</y>
+         <width>121</width>
+         <height>41</height>
+        </rect>
+       </property>
+       <property name="text">
+        <string>启动国服</string>
+       </property>
+      </widget>
+      <widget class="QLineEdit" name="LaunchOpt2">
+       <property name="geometry">
+        <rect>
+         <x>10</x>
+         <y>30</y>
+         <width>391</width>
+         <height>31</height>
+        </rect>
+       </property>
+      </widget>
+      <widget class="QPushButton" name="LaunchWWd2">
+       <property name="geometry">
+        <rect>
+         <x>280</x>
+         <y>70</y>
+         <width>121</width>
+         <height>41</height>
+        </rect>
+       </property>
+       <property name="text">
+        <string>启动国际服</string>
+       </property>
+      </widget>
      </widget>
     </widget>
     <widget class="QWidget" name="TabDemo">
@@ -950,6 +1139,21 @@ p, li { white-space: pre-wrap; }
       </property>
      </widget>
     </widget>
+    <widget class="QWidget" name="TabPCconfig">
+     <attribute name="title">
+      <string>配置</string>
+     </attribute>
+     <widget class="QTextEdit" name="PCconfig">
+      <property name="geometry">
+       <rect>
+        <x>10</x>
+        <y>10</y>
+        <width>411</width>
+        <height>551</height>
+       </rect>
+      </property>
+     </widget>
+    </widget>
     <widget class="QWidget" name="TabInfo">
      <property name="enabled">
       <bool>true</bool>
@@ -998,7 +1202,7 @@ border-radius:10px;</string>
 &lt;html&gt;&lt;head&gt;&lt;meta name=&quot;qrichtext&quot; content=&quot;1&quot; /&gt;&lt;style type=&quot;text/css&quot;&gt;
 p, li { white-space: pre-wrap; }
 &lt;/style&gt;&lt;/head&gt;&lt;body style=&quot; font-family:'微软雅黑'; font-size:18pt; font-weight:400; font-style:normal;&quot;&gt;
-&lt;p align=&quot;center&quot; style=&quot; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;&lt;span style=&quot; font-family:'更纱黑体 SC';&quot;&gt;CSGO工具箱V1.0.2c&lt;/span&gt;&lt;/p&gt;
+&lt;p align=&quot;center&quot; style=&quot; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;&lt;span style=&quot; font-family:'更纱黑体 SC';&quot;&gt;CSGO工具箱V1.0.3&lt;/span&gt;&lt;/p&gt;
 &lt;p align=&quot;center&quot; style=&quot; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;-----------------&lt;/p&gt;
 &lt;p align=&quot;center&quot; style=&quot; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;&lt;span style=&quot; font-family:'更纱黑体 SC';&quot;&gt;@Purp1e&lt;/span&gt;&lt;/p&gt;
 &lt;p align=&quot;center&quot; style=&quot;-qt-paragraph-type:empty; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px; font-family:'更纱黑体 SC';&quot;&gt;&lt;br /&gt;&lt;/p&gt;
