--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -91,7 +91,7 @@
      <enum>QTabWidget::Rounded</enum>
     </property>
     <property name="currentIndex">
-     <number>2</number>
+     <number>1</number>
     </property>
     <property name="tabBarAutoHide">
      <bool>false</bool>
@@ -866,7 +866,7 @@ p, li { white-space: pre-wrap; }
       <property name="geometry">
        <rect>
         <x>10</x>
-        <y>300</y>
+        <y>310</y>
         <width>411</width>
         <height>121</height>
        </rect>
@@ -915,7 +915,7 @@ p, li { white-space: pre-wrap; }
       <property name="geometry">
        <rect>
         <x>260</x>
-        <y>450</y>
+        <y>470</y>
         <width>161</width>
         <height>41</height>
        </rect>
@@ -928,7 +928,7 @@ p, li { white-space: pre-wrap; }
       <property name="geometry">
        <rect>
         <x>260</x>
-        <y>490</y>
+        <y>510</y>
         <width>141</width>
         <height>51</height>
        </rect>
@@ -959,6 +959,57 @@ p, li { white-space: pre-wrap; }
 &lt;/style&gt;&lt;/head&gt;&lt;body style=&quot; font-family:'SimSun'; font-size:9pt; font-weight:400; font-style:normal;&quot;&gt;
 &lt;p style=&quot; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;&lt;span style=&quot; font-family:'微软雅黑','微软雅黑','微软雅黑'; font-size:12pt;&quot;&gt;双击打开主界面&lt;/span&gt;&lt;/p&gt;
 &lt;p style=&quot; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;&lt;span style=&quot; font-family:'微软雅黑','微软雅黑','微软雅黑'; font-size:12pt;&quot;&gt;单击打开托盘菜单&lt;/span&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+      </property>
+     </widget>
+     <widget class="QSlider" name="sliderLaunchFirst">
+      <property name="geometry">
+       <rect>
+        <x>255</x>
+        <y>290</y>
+        <width>60</width>
+        <height>20</height>
+       </rect>
+      </property>
+      <property name="maximum">
+       <number>1</number>
+      </property>
+      <property name="pageStep">
+       <number>1</number>
+      </property>
+      <property name="value">
+       <number>1</number>
+      </property>
+      <property name="orientation">
+       <enum>Qt::Horizontal</enum>
+      </property>
+      <property name="tickInterval">
+       <number>0</number>
+      </property>
+     </widget>
+     <widget class="QLabel" name="label_Opt1">
+      <property name="geometry">
+       <rect>
+        <x>320</x>
+        <y>280</y>
+        <width>70</width>
+        <height>40</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>启动项①</string>
+      </property>
+     </widget>
+     <widget class="QLabel" name="label_Opt2">
+      <property name="geometry">
+       <rect>
+        <x>180</x>
+        <y>280</y>
+        <width>70</width>
+        <height>40</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>启动项②</string>
       </property>
      </widget>
     </widget>
@@ -1219,7 +1270,7 @@ p, li { white-space: pre-wrap; }
        <string>获取电脑配置信息</string>
       </property>
      </widget>
-     <widget class="QPushButton" name="pushButton">
+     <widget class="QPushButton" name="screenshotClip">
       <property name="geometry">
        <rect>
         <x>10</x>
